# launchpad

./: .gitignore  AGENTS.md  BENEFITS.md  CHANGELOG.md  LICENSE  README.md  USAGE.md  pom.xml
.github/workflows/: release-native.yml
docs/: architecture.adoc  getting-started.adoc  index.adoc  mcp-errors.adoc  mcp-tools.adoc  output-contract.adoc  project-model.adoc  providers.md  roadmap.adoc  standards-index.adoc  standards-pack.adoc  standards-packs.adoc
docs/resources/: Launchpad.drawio
src/main/resources/: application-mcp.properties  application.properties  logback-spring.xml
src/main/resources/prompts/cursor-rules/: django.txt  fastapi.txt  generic.txt  next.txt  rails.txt  spring.txt
src/main/resources/prompts/rules/: generic.txt
src/main/resources/prompts/skills/: django.txt  fastapi.txt  generic.txt  next.txt  rails.txt  spring.txt
src/main/resources/prompts/summary/: django.txt  fastapi.txt  generic.txt  next.txt  rails.txt  spring.txt
src/main/resources/prompts/synthesis/: architecture-narrative.txt  build-profiles.txt  endpoint-notes.txt  project-intro.txt  project-map.txt
src/main/resources/standards/: rules.yml  skills.yml
src/test/resources/fixtures/databricks-recon/: README.md  pyproject.toml
src/test/resources/fixtures/databricks-recon/pipelines/: recon_dlt.py
src/test/resources/fixtures/databricks-recon/scripts/: publish_report.py
src/test/resources/fixtures/databricks-recon/sql/: left_source.sql  right_source.sql
src/test/resources/fixtures/databricks-recon/terraform/: main.tf  variables.tf  versions.tf
(+466 files in other folders)
